test/expected/declare_uc32.out
declare x as unsigned char32_t
        ^
9: error: "unsigned char32_t" is illegal for built-in type
